[package]
name = "dvs-rpkg"
version = "0.0.0-9000"
edition = "2021"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[[bin]]
name = "document"
path = "document.rs"
bench = false

[lib]
path = "lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]

[dependencies]
miniextendr-api = { git = "https://github.com/CGMossa/miniextendr", features = [
    "serde",
] }
dvs = { path = "../../../dvs" }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.100"
walkdir = "2.5.0"

[build-dependencies]
miniextendr-lint = { git = "https://github.com/CGMossa/miniextendr" }

# Patch crates.io dependencies to use git sources
# This is needed because miniextendr crates depend on each other via workspace deps
# which resolve to version = "*" and can't be found on crates.io
[patch.crates-io]
miniextendr-api = { git = "https://github.com/CGMossa/miniextendr" }
miniextendr-macros = { git = "https://github.com/CGMossa/miniextendr" }
miniextendr-macros-core = { git = "https://github.com/CGMossa/miniextendr" }
# miniextendr-engine = { git = "https://github.com/CGMossa/miniextendr" }
miniextendr-lint = { git = "https://github.com/CGMossa/miniextendr" }
